# OmniNav

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  INSTALL.md  README.md  README_CN.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/contributing/: IMPLEMENTATION_PLAN.md  REQUIREMENTS.md  TASK.md  WALKTHROUGH.md
.github/workflows/: deploy-docs.yml
configs/: config.yaml
configs/algorithm/: global_grid_path.yaml  global_route_opt.yaml  global_sequential.yaml  inspection.yaml  local_dwa.yaml  pipeline_default.yaml  waypoint.yaml
configs/demo/: camera_visualization.yaml  getting_started.yaml  inspection.yaml  lidar_visualization.yaml  nav2_bridge.yaml  ros2_nav2_full.yaml  ros2_rviz_sensor.yaml  teleop_go2.yaml  teleop_go2w.yaml  waypoint_navigation.yaml
configs/locomotion/: ik_gait.yaml  kinematic.yaml  kinematic_gait.yaml  simple_gait.yaml  wheel.yaml
configs/robot/: go2.yaml  go2w.yaml
configs/scene/: complex_flat_obstacles.yaml  empty.yaml  nav_open_space.yaml  ring_obstacles.yaml  stairs.yaml  waypoint_arena.yaml
configs/sensor/: camera_rgbd.yaml  default.yaml  lidar_2d.yaml
configs/task/: inspection.yaml  point_nav.yaml  waypoint.yaml
dev_docs/: README.md  implementation_plan.md  prompt.md  requirements.md  task.md  walkthrough.md
docs/: changelog.md  conf.py  contributing.md  index.md  requirements.txt
docs/_static/css/: custom.css
docs/_static/js/: language-toggle.js
docs/api_reference/: algorithms.md  changelog.md  configs_examples.md  contributing.md  core.md  core_runtime.md  evaluation.md  index.md  interfaces.md  robots.md  robots_sensors_locomotion.md
docs/getting_started/: examples_catalog.md  first_simulation.md  getting_started.md  index.md  installation.md  ros2_nav2_demos.md
docs/user_guide/: algorithms.md  architecture.md  evaluation.md  index.md  robots.md  ros2_integration.md  scenes.md  sensors.md
docs/user_guide/advanced/: contributing.md  ros2_demos.md  ros2_integration.md
docs/user_guide/algorithms/: algorithms.md  evaluation.md
docs/user_guide/core_concepts/: architecture.md  robots.md  scenes.md
docs/user_guide/overview/: examples.md  first_simulation.md  getting_started.md  installation.md  what_is_omninav.md
docs/zh/: index.md
docs/zh/api_reference/: algorithms.md  changelog.md  configs_examples.md  contributing.md  core_runtime.md  evaluation.md  index.md  interfaces.md  robots_sensors_locomotion.md
docs/zh/getting_started/: examples_catalog.md  getting_started.md  index.md  installation.md  ros2_nav2_demos.md
examples/: 01_teleop_go2.py  02_teleop_go2w.py  03_lidar_visualization.py  04_camera_visualization.py  05_waypoint_navigation.py  06_inspection_task.py  06_ros2_nav2_bridge.py  06_teleop_simple_gait.py  07_terrain_adaptation.py  run_inspection.py  simple_go2.py
examples/getting_started/: README.md  __init__.py  algorithm_template.py  catalog.py  run_getting_started.py  task_template.py
examples/ros2/: README.md
examples/ros2/omninav_ros2_examples/: README.md  package.xml  setup.cfg  setup.py
examples/ros2/omninav_ros2_examples/configs/demo/: ros2_nav2_full.yaml  ros2_rviz_sensor.yaml
examples/ros2/omninav_ros2_examples/configs/locomotion/: kinematic_wheel_position.yaml  wheel.yaml
examples/ros2/omninav_ros2_examples/configs/robot/: go2w.yaml
examples/ros2/omninav_ros2_examples/configs/scene/: complex_flat_obstacles.yaml
examples/ros2/omninav_ros2_examples/launch/: nav2_full_stack.launch.py  rviz_sensor_demo.launch.py
examples/ros2/omninav_ros2_examples/maps/: complex_flat.pgm  complex_flat.yaml  nav_open_space.pgm  nav_open_space.yaml
examples/ros2/omninav_ros2_examples/omninav_ros2_examples/: __init__.py  nav2_bridge_demo.py  rviz_sensor_demo.py
examples/ros2/omninav_ros2_examples/params/: nav2_params.yaml
examples/ros2/omninav_ros2_examples/resource/: omninav_ros2_examples
examples/ros2/omninav_ros2_examples/rviz/: omninav_nav2.rviz  omninav_sensor.rviz
examples/ros2/omninav_ros2_examples/scripts/: nav2_bridge_demo  rviz_sensor_demo
omninav/: __init__.py
omninav/algorithms/: __init__.py  base.py  global_base.py  global_grid_path.py  global_route_opt.py  global_sequential.py  inspection_planner.py  local_planner.py  pipeline.py
omninav/assets/: __init__.py  base.py  path_resolver.py
omninav/assets/map/: __init__.py
omninav/core/: __init__.py  base.py  hooks.py  lifecycle.py  registry.py  runtime.py  simulation_manager.py  types.py
omninav/core/map/: __init__.py  facade.py  service.py  types.py
omninav/evaluation/: __init__.py  base.py
omninav/evaluation/metrics/: __init__.py  inspection_metrics.py
omninav/evaluation/tasks/: __init__.py  inspection_task.py  waypoint_task.py
omninav/interfaces/: __init__.py  gym_wrapper.py  python_api.py
omninav/interfaces/ros2/: __init__.py  adapter.py  bridge.py  components.py
omninav/locomotion/: __init__.py  base.py  ik_controller.py  kinematic_controller.py  rl_controller.py  simple_gait.py  wheel_controller.py
omninav/robots/: __init__.py  base.py  go2.py  go2w.py
omninav/sensors/: __init__.py  base.py  camera.py  lidar.py  raycaster.py  raycaster_depth.py
scripts/docs/: check_bilingual_structure.py  check_docs_style.py  check_repo_links.py
src/omninav/: __init__.py
src/omninav/assets/: __init__.py
src/omninav/core/: registry.py
tests/: conftest.py  test_placeholder.py
tests/algorithms/: test_global_grid_path.py  test_pipeline.py
tests/core/: test_hooks.py  test_lifecycle.py  test_map_service.py  test_registry.py  test_runtime_task_spec.py  test_types.py
tests/evaluation/: test_inspection.py  test_waypoint_task.py
tests/examples/: test_demo_config_contract.py  test_examples_smoke.py  test_getting_started_catalog.py  test_getting_started_overrides.py  test_getting_started_smoke.py  test_ros2_example_config_sync.py
tests/integration/: test_batch_pipeline.py  test_full_pipeline.py
tests/interfaces/: test_env.py  test_ros2_adapter.py  test_ros2_bridge.py
tests/locomotion/: test_locomotion.py
tests/robots/: test_robot_base.py
tests/sensors/: test_sensors.py
(+21 files in other folders)
