[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omninav"
version = "0.1.0"
description = "Universal Simulation Platform for Embodied AI"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Royalvice"}
]
keywords = ["robotics", "simulation", "embodied-ai", "navigation", "genesis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.21.0",
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    "scipy>=1.9.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]
docs = [
    "sphinx>=7.0.0",
    "pydata-sphinx-theme>=0.14.0",
    "myst-parser>=2.0.0",
    "sphinx-copybutton>=0.5.0",
    "sphinx-autodoc-typehints>=1.24.0",
    "sphinx-design>=0.5.0",
]
ros2 = [
    # ROS2 dependencies are managed via colcon, not pip
]

[project.urls]
Homepage = "https://github.com/Royalvice/OmniNav"
Documentation = "https://royalvice.github.io/OmniNav/"
Repository = "https://github.com/Royalvice/OmniNav"
Issues = "https://github.com/Royalvice/OmniNav/issues"

[project.scripts]
omninav = "omninav.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["omninav*"]

[tool.black]
line-length = 88
target-version = ["py311", "py312", "py313"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
  | external
)/
'''

[tool.isort]
profile = "black"
line_length = 88
skip = [".git", ".venv", "build", "dist", "external"]

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = [".git", ".venv", "build", "dist", "external"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "D", "UP"]
ignore = ["D100", "D104"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
exclude = ["external/", "build/", "dist/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
markers = [
    "integration: marks integration tests that may run slower than unit tests",
    "smoke: marks heavyweight example smoke tests",
    "slow: marks intentionally slow tests",
]
